hphp/hack/test/typecheck/is_expression/nonnull2.php.exp
ERROR: File "nonnull2.php", line 6, characters 16-17:
Invalid argument (Typing[4110])
  File "nonnull2.php", line 11, characters 21-23:
  Expected `int`
  File "nonnull2.php", line 3, characters 12-16:
  But got `nonnull`
